disabled the mode selection for now, fixed the card front img clipping

--- a/src/components/card-list/card-list.styles.scss
+++ b/src/components/card-list/card-list.styles.scss
@@ -6,7 +6,7 @@
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   // grid-template-rows: auto;
   column-gap: 0rem;
-  row-gap: 0.5rem;
+  grid-gap: 0.5rem;
 
   justify-content: space-evenly;
   justify-items: center;
